syntax = "proto3";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "gRPCTest";

package Weather;

// The weather forecast service definition
service Weather {

    // Gets weather forecast
    rpc Forecast(WeatherForecastRequest) returns (WeatherForecastResponse);
}

// The request message
message WeatherForecastRequest {

}

// The response message
message WeatherForecastResponse {
    google.protobuf.Timestamp date = 1;
    int32 temperatureC = 2;
    int32 temperatureF = 3;
    string summary = 4;
}